--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div> 
         <section class="section-1">
             <h1>Easy Shopping Via Mobile</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur  adipiscing elit. Donec lorem justo, sollicitudin vel ultricies sed, eleifend nec metus. Etiam vitae pellentesque dolor. </p>
+            <p>Lorem ipsum dolor sit amt, consectetur  adipiscing elit. Donec lorem justo, sollicitudin vel ultricies sed, eleifend nec metus. Etiam vitae pellentesque dolor. </p>
             <button>Get Started</button>
         </section>
         
